code 优化 x3